    be uploaded with the patch included, the patch will only be applied, if it
    applies cleanly without errors.
  * dont merge kernel config snipplets, rather use one config file per arch
    and kernel version (2.4/2.6)
  * added some drivers for various network cards and scsi controllers 
    (closes: #328232)
  * updated README (closes: #328230)
  * updated the FSF address in copyright
  * confirmed that the package conforms to debian-policy 3.6.2
  * made build-dependency to debhelper versioned and raised debian/compat to
    a non-deprecated value
  * added myself to maintainers field

 -- Holger Levsen <debian@layer-acht.org>  Fri, 21 Nov 2005 14:42:23 +0100

fai-kernels (1.9.1) unstable; urgency=high

  * recompile with new kernel sources
  * use kernel-tree-2.6.8-16 and kernel-tree-2.4.27-10

 -- Thomas Lange <lange@debian.org>  Tue, 31 May 2005 14:33:16 +0200

fai-kernels (1.9) unstable; urgency=high

  * provide kernel patchlevel in Build-depends to easier track security
    issues (closes: #297811)
  * build-depends on kernel-tree packges with abi version number
  * added README.security-updates, README.non-i386
  * prepare the rules files to support powerpc
  * added powerpc-kernel-configs
  * rules: set PATCH_THE_KERNEL=YES, so kernel-sources will be patched

 -- Thomas Lange <lange@debian.org>  Fri,  8 Apr 2005 16:05:45 +0200

fai-kernels (1.8.2) unstable; urgency=low

  * add SATA support for 2.4 kernel (closes: 286854)
  * add IA32_EMULATION (only usefull on x86-64)
  * disable math emulation to make kernel fit on a floppy (for 2.6 kernel)
  * ps2 mouse and serial mouse as module, disable autofs support (2.6 kernel)
  * rules: include file versions which sets the variables kversion and
    kversion24
  * disable HAMACHI and ARCNET in both kernel configs
  * enable options which are needed for fai bootcd kernel
  * use gcc 3.3.5 for compilation
  
 -- Thomas Lange <lange@debian.org>  Fri,  7 Jan 2005 11:58:37 +0100
